--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Script Snake</title>
+
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <div id="game">
+            <h3>Script Snake</h3>
+            <canvas id="gameCanvas" width="400" height="400"></canvas>
+        </div>
         <script src="snake.js" charset="utf-8"></script>
     </body>
 </html>
