--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <body>
         <div id="game">
             <h3>Script Snake</h3>
+            <div id="score">0</div>
             <canvas id="gameCanvas" width="400" height="400"></canvas>
         </div>
+        
+        <script src="createTag.js" charset="utf-8"></script>
         <script src="snake.js" charset="utf-8"></script>
     </body>
 </html>
