--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="game">
             <h3>Script Snake</h3>
-            <div id="score">0</div>
+            <div>Score: <span id="score">0</span></div>
             <canvas id="gameCanvas" width="400" height="400"></canvas>
         </div>
 
