--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div id="game">
-            <h3>Script Snake</h3>
-            <div>Score: <span id="score">0</span></div>
+            <h1>Script Snake</h1>
+            <div class="subtitle">Score: <span id="score">0</span></div>
             <canvas id="gameCanvas" width="400" height="400"></canvas>
         </div>
 
