added restart button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             <h1>Script Snake</h1>
             <div class="subtitle">Score: <span id="score">0</span></div>
             <canvas id="gameCanvas" width="400" height="400"></canvas>
+
+            <button type="button" name="restart" onClick="restart()">Start Over</button>
         </div>
 
         <!--
