--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
             <button type="button" name="restart" onClick="restart()">Start Over</button>
         </div>
 
-        <!--
-            <script src="createTag.js" charset="utf-8"></script>
-        -->
-        <script src="snake.js" charset="utf-8"></script>
+        <script src="game.js" charset="utf-8"></script>
     </body>
 </html>
