added express server

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Script Snake</title>
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
         <div id="game">
@@ -15,6 +15,6 @@
             <button type="button" name="restart" onClick="restart()">Start Over</button>
         </div>
 
-        <script src="game.js" charset="utf-8"></script>
+        <script src="js/game.js" charset="utf-8"></script>
     </body>
 </html>
